<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

        <!--TODO checar y revisar todo lo de aqui que esta Horrible -->

    <LinearLayout
        android:id="@+id/id_Oppti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@color/Col_Connect2"
        >

        <Button
            android:id="@+id/id_ButtonOfertIni"
            style="@style/Sty_BtnChangIni"
            android:text="Ofertas cercanas"

            />
        <Button
            android:id="@+id/id_ButtonArtIni"
            style="@style/Sty_BtnChangIni"
            android:text="Articulos"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_ContentOferta"
        android:layout_margin="4dp"
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/id_Oppti"
        android:background="@color/Col_Connect2"
        android:weightSum="1"
        android:gravity=""
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/BlancoCachas"
            >

            <!--TODO Replase button con el logo de la emresa (o algo asi) -->
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Holi"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/id_EmperNameOff"
                    style="@style/Sty_EmpinOfer"
                    android:text="@string/txtvarOf_Emp"/>
                <TextView
                    android:id="@+id/id_EspEmpOff"
                    style="@style/Sty_AreinOfer"
                    android:text="@string/txtvarOf_Area"
                    />
                <TextView
                    android:id="@+id/id_PuestOff"
                    style="@style/Sty_PuestinOfer"
                    android:text="@string/txtvarOf_Pues"
                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/id_SalaOff"
            style="@style/Sty_TitinOfer"
            android:text="@string/txtstOf_Sal"/>
        <TextView
            android:id="@+id/_SalaDetOff"
            style="@style/Sty_DetinOfer"
            android:text="@string/txtvarOf_Sal"
            />
        <TextView
            android:id="@+id/id_DescOff"
            style="@style/Sty_TitinOfer"
            android:text="@string/txtstOf_Desc"/>
        <TextView
            android:id="@+id/id_DescDetOff"
            style="@style/Sty_DetinOfer"
            android:text="@string/txtvarOf_Desc"
            />
        <TextView
            android:id="@+id/id_TelOff"
            style="@style/Sty_TitinOfer"
            android:text="@string/txtstOf_Tel"/>
        <TextView
            android:id="@+id/id_TelDetOff"
            style="@style/Sty_DetinOfer"
            android:text="@string/txtvarOf_Tel"
            />
        <TextView
            android:id="@+id/id_BenefOff"
            style="@style/Sty_TitinOfer"
            android:text="@string/txtstOf_Benf"/>
        <TextView
            android:id="@+id/id_BenefDetOff"
            style="@style/Sty_DetinOfer"
            android:text="@string/txtvarOf_Benf"
            />
        <TextView
            android:id="@+id/id_CompROff"
            style="@style/Sty_TitinOfer"
            android:text="@string/txtstOf_ComR"/>
        <TextView
            android:id="@+id/id_CompRDetOff"
            style="@style/Sty_DetinOfer"
            android:text="@string/txtvarOf_ComR"
            />
        <TextView
            android:id="@+id/id_UbiOff"
            style="@style/Sty_TitinOfer"
            android:text="@string/txtstOf_Ubi"/>
        <TextView
            android:id="@+id/id_UbiDetOff"
            style="@style/Sty_DetinOfer"
            android:text="@string/txtvarOf_Ubi"
            />

        <TextView
            android:id="@+id/id_OcultROff"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtstOf_Oct"
        />


    </LinearLayout>


</RelativeLayout>
